--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  overflow-x: hidden;
+}
+
 .workers {
   justify-content: center;
   background: #FAFAFA;
   display: flex;
   align-content: center;
   flex-wrap: wrap;
-  font-family: Montserrat;
+  width: 100%;
+  max-width: 1136px;
+  padding-bottom: 100px;
 }
-.workers .workers--title {
+
+.workers--title {
   padding-top: 50px;
 }
-.workers .workers--slider__wrapper {
+
+.slider-wrapper {
   overflow: hidden;
   max-width: 1200px;
   margin: 0 70px 55px;
   padding-top: 150px;
 }
-.workers .workers--card__item {
+
+.card-item {
   height: 200px;
   max-width: 360px;
   width: 100%;
@@ -34,7 +51,8 @@
   border: 1px solid rgba(17, 17, 17, 0.1019607843);
   box-shadow: 0px 9.05px 26.57px 0px rgba(215, 228, 249, 0.2509803922);
 }
-.workers .workers--user__name {
+
+.user-name {
   font-family: Montserrat;
   font-size: 18px;
   line-height: 24px;
@@ -42,7 +60,8 @@
   padding-bottom: 24px;
   margin-top: -70px;
 }
-.workers .workers--user__image {
+
+.user-image {
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -51,13 +70,15 @@
   position: relative;
   top: -80px;
 }
-.workers .workers--card__list .workers--card__item {
+
+.card-list .card-item {
   font-size: 1.15rem;
   color: #000000;
   font-weight: 500;
   margin: 14px 0 40px;
 }
-.workers .workers--user__profession {
+
+.user-profession {
   font-family: Montserrat;
   font-size: 14px;
   font-weight: 400;
@@ -65,7 +86,8 @@
   letter-spacing: -0.02em;
   text-align: center;
 }
-.workers .workers--card__list .workers--card__item .workers--message__button {
+
+.card-list .card-item .message-button {
   font-size: 1.25rem;
   padding: 10px 35px;
   color: #030728;
@@ -76,37 +98,98 @@
   border: 1px solid transparent;
   transition: 0.2s ease;
 }
-.workers .workers--card__list .workers--card__item .workers--message__button:hover {
+
+.card-list .card-item .message-button:hover {
   background: rgb(255, 255, 255);
   border: 1px solid #fff;
   color: #fff;
 }
-.workers .workers--slider__wrapper .workers--swiper__pagination--bullet {
+
+.slider-wrapper .swiper-pagination-bullet {
   background: #FD9222;
   height: 13px;
   width: 13px;
   opacity: 0.5;
 }
-.workers .workers--slider__wrapper .swiper-pagination-bullet-active {
+
+.slider-wrapper .swiper-pagination-bullet-active {
   opacity: 1;
 }
-.workers .workers--slider__wrapper .workers--swiper__slide--button {
+
+.slider-wrapper .swiper-slide-button {
   color: #b6b6b6;
   margin-top: -55px;
   transition: 0.2s ease;
 }
-.workers .workers--slider__wrapper .workers--swiper__slide--button:hover {
+
+.slider-wrapper .swiper-slide-button:hover {
   color: #FD9222;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+dialog {
+  background: #FAFAFA;
+  width: 100%;
+  max-width: 517px;
+  height: 631px;
+  position: relative;
+  top: 194px;
+  left: 18px;
+  border-radius: 15px;
+  opacity: 1px;
 }
 
-body {
-  height: auto;
+.regButton {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 6px 24px;
+  cursor: pointer;
+}
+
+.regButton:hover {
+  background: #ccc;
+}
+
+#window {
   width: 100%;
-  max-width: 1136px;
+  max-width: 517px;
+  height: 631px;
+  margin: 40px auto;
+  background: #fff;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  z-index: 150;
+  display: none;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.form {
+  width: 100%;
+  max-width: 517px;
+  height: 631px;
+  margin: -15px auto 20px auto;
+}
+
+.input {
+  width: 260px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.gray {
+  opacity: 0.8;
+  padding: 15px;
+  background-color: rgb(1, 1, 1);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: none;
+  z-index: 100;
+  overflow: auto;
 }
