--- a/_adaptive.scss
+++ b/_adaptive.scss
@@ -1,4 +1,8 @@
 @media (max-width: 768px) {
+    .workers{
+      padding-bottom: 100px;
+      padding-bottom: 128px;
+    }
     .slider-wrapper {
       margin: 0 10px 40px;
     }
