--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-* {
+@media (max-width: 768px) {
+  .workers {
+    padding-bottom: 100px;
+    padding-bottom: 128px;
+  }
+  .slider-wrapper {
+    margin: 0 10px 40px;
+  }
+  .slider-wrapper .swiper-slide-button {
+    display: none;
+  }
+}
+.workers * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  overflow-x: hidden;
-}
-
 .workers {
+  width: 100%;
   justify-content: center;
   background: #FAFAFA;
   display: flex;
-  align-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  max-width: 1136px;
-  padding-bottom: 100px;
+  flex-direction: column;
+  align-items: center;
 }
 
-.workers--title {
+.workers-title {
   padding-top: 50px;
 }
 
 .slider-wrapper {
   overflow: hidden;
-  max-width: 1200px;
+  max-width: 1024px;
+  width: 100%;
   margin: 0 70px 55px;
   padding-top: 150px;
 }
@@ -36,11 +41,8 @@ body {
 .card-item {
   height: 200px;
   max-width: 360px;
-  width: 100%;
+  width: 10%;
   color: #000000;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
   padding: 35px;
   display: flex;
   flex-direction: column;
@@ -126,16 +128,19 @@ body {
   color: #FD9222;
 }
 
-dialog {
+.dialog {
   background: #FAFAFA;
   width: 100%;
   max-width: 517px;
   height: 631px;
-  position: relative;
-  top: 194px;
-  left: 18px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 15px;
   opacity: 1px;
+  border: 1.5px solid rgba(0, 0, 0, 0.031372549);
+  box-sizing: border-box;
 }
 
 .regButton {
@@ -170,14 +175,15 @@ dialog {
 .form {
   width: 100%;
   max-width: 517px;
-  height: 631px;
+  height: auto;
   margin: -15px auto 20px auto;
 }
 
 .input {
+  box-sizing: border-box;
   width: 260px;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .gray {
@@ -192,4 +198,125 @@ dialog {
   display: none;
   z-index: 100;
   overflow: auto;
+}
+
+.workers--modal__title {
+  width: 298px;
+  height: 56px;
+  position: relative;
+  top: 40px;
+  left: 40px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: -0.03em;
+  text-align: left;
+}
+
+.workers--modal__form {
+  width: 437px;
+  height: 392px;
+  position: relative;
+  top: 68px;
+  left: 20px;
+  gap: 19px;
+  opacity: 0px;
+}
+
+.input {
+  width: 437px;
+  height: 66px;
+  padding: 22px 24px 22px 24px;
+  gap: 40px;
+  border-radius: 13px;
+  border: 1.5px solid rgba(0, 0, 0, 0.031372549);
+  opacity: 0px;
+  box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.031372549);
+}
+
+.input::-moz-placeholder {
+  color: rgba(64, 64, 64, 0.3019607843);
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.94px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.input::placeholder {
+  color: rgba(64, 64, 64, 0.3019607843);
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.94px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.phone_mask {
+  color: rgba(64, 64, 64, 0.3019607843);
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.94px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.ukraine-svg {
+  position: absolute;
+  top: 192.5px;
+  left: 25px;
+}
+
+.comment {
+  height: 137px;
+}
+
+.show-modal-btn {
+  width: 222px;
+  height: 50px;
+  padding: 14px 40px 14px 40px;
+  gap: 14px;
+  border-radius: 100px;
+  border: 1px solid #FD9222;
+  opacity: 0px;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 50px;
+  margin-bottom: 128px;
+  background: #FAFAFA;
+}
+
+.show-modal-btn:hover {
+  background-color: #FD9222;
+  color: #FFFFFF;
+}
+
+.close-modal-btn {
+  width: 133px;
+  height: 45px;
+  padding: 14px 40px 14px 40px;
+  gap: 14px;
+  border: none;
+  border-radius: 100px;
+  background: #FD9222;
+  position: relative;
+  top: 75px;
+  left: 22.5px;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 600;
+  color: #FFFFFF;
+}
+
+.close-modal-btn:hover {
+  border: 1px solid #FD9222;
+  background: #FFFFFF;
+  color: #000000;
 }
